added changes for Zipkin and Resilience4j

--- a/bookingservice/src/main/resources/application.properties
+++ b/bookingservice/src/main/resources/application.properties
@@ -1,5 +1,35 @@
+spring.application.name=booking-service
+server.port=8081
+
 spring.datasource.url=jdbc:mysql://localhost:3306/bookingdb
 spring.datasource.username=root
 spring.datasource.password=password123$
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+management.health.circuitbreakers.enabled=true
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+management.tracing.sampling.probability=1
+
+#Resilienece 4j properties
+resilience4j.circuitbreaker.instances.external.register-health-indicator=true
+resilience4j.circuitbreaker.instances.external.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.external.sliding-window-type=COUNT_BASED
+resilience4j.circuitbreaker.instances.external.sliding-window-size=5  
+resilience4j.circuitbreaker.instances.external.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.external.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.external.wait-duration-in-open-state=5s
+resilience4j.circuitbreaker.instances.external.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.external.automatic-transition-from-open-to-half-open-enabled=true
+
+
+#Resilience4J Timeout Properties
+resilience4j.timelimiter.instances.inventory.timeout-duration=3s
+
+#Resilience4J Retry Properties
+resilience4j.retry.instances.external.max-attempts=3
+resilience4j.retry.instances.external.wait-duration=5s
+
+
+
