--- a/bookingservice/pom.xml
+++ b/bookingservice/pom.xml
@@ -16,7 +16,7 @@
 	<description>Booking microservice for flights System</description>
 	<properties>
 		<java.version>17</java.version>
-		<!--<spring-cloud.version>2022.0.2</spring-cloud.version> -->
+		<spring-cloud.version>2022.0.2</spring-cloud.version> 
 	</properties>
 	<dependencies>
 		<dependency>
@@ -38,7 +38,7 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
-		<!-- 
+		
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
@@ -46,16 +46,37 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
-		</dependency>
-		-->
 		<dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-tracing-bridge-brave</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.zipkin.reporter2</groupId>
+			<artifactId>zipkin-reporter-brave</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-circuitbreaker-reactor-resilience4j</artifactId>
+		</dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
-	<!--
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -67,8 +88,6 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
--->
-
 	<build>
 		<plugins>
 			<plugin>
