--- a/bookingservice/src/main/resources/application.properties
+++ b/bookingservice/src/main/resources/application.properties
@@ -10,7 +10,12 @@ spring.jpa.hibernate.ddl-auto=update
 management.health.circuitbreakers.enabled=true
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-management.tracing.sampling.probability=1
+
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.tracing.sampling.probability=1.0
+spring.mvc.problemdetails.enabled=true
 
 #Resilienece 4j properties
 resilience4j.circuitbreaker.instances.external.register-health-indicator=true
@@ -30,6 +35,16 @@ resilience4j.timelimiter.instances.inventory.timeout-duration=3s
 #Resilience4J Retry Properties
 resilience4j.retry.instances.external.max-attempts=3
 resilience4j.retry.instances.external.wait-duration=5s
+
+
+#Kafka Configuration
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.template.default-topic=notificationTopic
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=event:com.techworld.booking.event.BookingCompletedEvent
+
+
 
 
 
