--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -10,7 +10,7 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.techworld</groupId>
-	<artifactId>api-gatewayr</artifactId>
+	<artifactId>api-gateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>api-gateway</name>
 	<description>Api Gateway</description>
