--- a/flightservice/flightservice/src/main/resources/application.properties
+++ b/flightservice/flightservice/src/main/resources/application.properties
@@ -1,14 +1,17 @@
+
 spring.application.name=flight-service
 server.port=8082
 
-
 spring.datasource.url=jdbc:mysql://localhost:3306/flightdb
+
 spring.datasource.username=root
 spring.datasource.password=password123$
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql= true
-
+#spring.jpa.show-sql= true
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 management.tracing.sampling.probability=1.0
+
+# Set the root logger level to INFO (for production)
+#logging.level.root=DEBUG
