--- a/flightsearchservice/src/main/resources/application.properties
+++ b/flightsearchservice/src/main/resources/application.properties
@@ -5,3 +5,6 @@ server.port=8089
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=flightsearchdb
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+management.tracing.sampling.probability=1.0
